# ComfyUI-Fal-Gateway

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  config.ini.example  pyproject.toml  release-please-config.json  requirements.txt
.github/workflows/: publish_action.yml  test.yml
examples/workflows/: flux_dev_t2i.json  seedance_pro_i2v.json  upscale_real_esrgan.json
src/: any_type.py  api_models.py  catalog_client.py  endpoint_overrides.py  fal_downloads.py  fal_uploads.py  json_mode.py  model_registry.py  models.py  output_decoder.py  overrides.py  pricing_cache.py  routes.py  schema_resolver.py  server_routes.py  widget_spec.py
src/catalogs/: __init__.py  _openrouter_shared.py  i2t.py  t2t.py
src/data/: fallback_catalog.json
src/fal/: _http.py  catalog.py  config.py  decoder.py  downloads.py  output_decoder.py  pricing.py  runner.py
src/nodes/: __init__.py  base.py  i2i.py  i2t.py  i2v.py  json_extract.py  ref2i.py  ref2v.py  t2i.py  t2t.py  t2v.py  upscale.py
src/registries/: i2t.py  (+2 more)
tests/: _dispatch.py  conftest.py  test_api_models.py  test_audio_decoder.py  test_build_payload.py  test_catalogs.py  test_comfyui_dispatch.py  test_decoder.py  test_display_strings.py  test_endpoint_overrides.py  test_fal_catalog_completeness.py  test_fal_config.py  test_http_routes.py  test_info_output.py  test_init.py  test_json_extract_node.py  test_json_mode.py  test_legacy_widgets_values_shift.py  test_model_registry.py  test_models.py  test_openrouter_catalog.py  test_openrouter_shared.py  test_output_decoder.py  test_overrides.py  test_pricing.py  test_pricing_cache.py  test_pricing_fetch.py  test_registries.py  test_routes.py  test_runner.py  test_schema_resolver.py  test_server_routes.py  test_storage_background.py  test_storage_catalog.py  test_storage_openrouter.py  test_text_output.py  test_url_guard.py  test_widget_spec.py
web/: fal_gateway.js
(+23 files in other folders)
